<resources>
    <string name="app_name">JuresCaym</string>
    <string name="etUsuario">Usuario</string>
    <string name="etContrasennna">Contraseña</string>
    <string name="btIngresar">Ingresar</string>
    <string name="btRegistrar">Registrar</string>
    <string name="title_activity_navegacion">Navegacion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_Inicio">Incio</string>
    <string name="menu_Actividades">Actividad</string>
    <string name="menu_Inscripciones">Inscripcion</string>
    <string name="menu_Noticias">Noticia</string>
    <string name="menu_share">Definir</string>
    <string name="menu_Jovenes">Jóvenes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navegacion_adm">NavegacionAdm</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_navegacion_admin">NavegacionAdmin</string>
    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>

    <string name="etNombre">Nombre</string>
    <string name="etApellido1">Primer apellido</string>
    <string name="etApellido2">Segundo apellido</string>
    <string name="etTelefono">Telefono</string>
    <string name="etActividad">Actividad</string>
    <string name="etMinisterio">Ministerio</string>
    <string name="etEdad">Edad</string>
    <string name="etTelefonoEncargado">Telefono encargado</string>
    <string name="etPadecimientos">Padecimientos...</string>
    <string name="btnGuardar">Guardar</string>


</resources>
