<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InscripcionFragment">

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="216dp"
        android:layout_height="45dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="93dp"
        android:background="@drawable/boton_redondeado"
        android:text="@string/btnGuardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPadecimiento"
        tools:text="@string/btnGuardar" />

    <Spinner
        android:id="@+id/spMinisterios"
        android:layout_width="236dp"
        android:layout_height="38dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="166dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="176dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:hint="@string/etNombre"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etApellido1"
        android:layout_width="187dp"
        android:layout_height="43dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/etApellido1"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spActividades"
        android:layout_width="232dp"
        android:layout_height="34dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="166dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/etApellido2"
        android:layout_width="177dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/etApellido2"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <EditText
        android:id="@+id/etEdad"
        android:layout_width="179dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/etEdad"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spActividades" />

    <EditText
        android:id="@+id/etTelefonoEncargado"
        android:layout_width="189dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/etTelefonoEncargado"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spActividades" />

    <EditText
        android:id="@+id/etPadecimiento"
        android:layout_width="386dp"
        android:layout_height="84dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/etPadecimientos"
        android:inputType="textMultiLine"
        android:lines="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEdad" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/etMinisterio"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etApellido2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="136dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/menu_Actividades"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spMinisterios" />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="186dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/etTelefono"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etApellido2"
        app:layout_constraintTop_toBottomOf="@+id/etApellido1" />
</android.support.constraint.ConstraintLayout>